src/test/resources/purescript_examples/failing/ConflictingQualifiedImports2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ScopeConflict\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSASTWrapperElement(PositionedDeclarationRef)
        PSASTWrapperElement(ImportModuleName)
          PsiElement(module)('module')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('X')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('X')
          PsiElement(whitespace)('\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('B')
          PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('X')
          PsiElement(whitespace)('\n')
